5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_2049.log
== TEST (2019-03-20 22:43:46) 
-- CODE:
var = int(input("dividendo/divisor"))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:47:20) 
-- CODE:
var = int(input("dividendo/divisor")

-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:47:30) 
-- CODE:
var = int(input("dividendo/divisor")
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:47:42) 
-- CODE:
var = int(input(dividendo/divisor)
-- ERROR:
File "XXXX", line 2
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:48:06) 
-- CODE:
var = int(input(x/y)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:48:25) 
-- CODE:
var = int(input(x/y)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:50:47) 
-- CODE:
var = input("x/y")
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:51:23) 
-- CODE:
var = input("x/y")
x%y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x%y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:51:43) 
-- CODE:
var = input("x/y")
x%y
x//y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x%y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:53:22) 
-- CODE:
var = input("x+y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x%y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:53:46) 
-- CODE:
var = input("x+y")
x/y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x/y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:54:38) 
-- CODE:
var = input("x+y")
x/y
x//y
x%y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x/y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:54:42) 
-- CODE:
var = input("x+y")
x/y
x//y
x%y
-- EXECUTION TIME:
0.257102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 2, in <module>
    x/y
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:55:13) 
-- CODE:
var = input("x/y")
x//y
x%y
print
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x//y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:55:16) 
-- CODE:
var = input("x/y")
x//y
x%y
print
-- EXECUTION TIME:
0.19554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 2, in <module>
    x//y
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:55:45) 
-- CODE:
var = input("x/y")
-- EXECUTION TIME:
0.124734
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:55:59) 
-- CODE:
var = int(input("x/y"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x//y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:56:04) 
-- CODE:
var = int(input("x/y"))
-- EXECUTION TIME:
0.183806
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:00:39) 
-- CODE:
var = int(input("x/y"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x//y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:00:46) 
-- CODE:
var = int(input("x/y"))
-- EXECUTION TIME:
0.207176
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:01:23) 
-- CODE:
var = int(input("dividendo/divisor"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x//y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:02:20) 
-- CODE:
var = int(input("dividendo/divisor"))
dividendo//divisor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dividendo//divisor
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:03:16) 
-- CODE:
var = int(input("dividendo/divisor"))
dividendo//divisor
dividendo%divisor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dividendo//divisor
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:04:02) 
-- CODE:
var = int(input("dividendo/divisor"))
dividendo//divisor
dividendo%divisor
-- EXECUTION TIME:
0.224701
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 2, in <module>
    dividendo//divisor
NameError: name 'dividendo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:04:30) 
-- CODE:
var = int(input("346/2"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dividendo//divisor
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:05:25) 
-- CODE:
var = int(input("346/2"))
346//2
346%2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dividendo//divisor
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:05:29) 
-- CODE:
var = int(input("346/2"))
346//2
346%2
-- EXECUTION TIME:
0.160932
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:06:01) 
-- CODE:
var = input("346/2")
346//2
346%2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dividendo//divisor
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:06:06) 
-- CODE:
var = input("346/2")
346//2
346%2
-- EXECUTION TIME:
0.131403
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:08:04) 
-- CODE:
var = input("dividendo/dividendo")
print(var)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:13:55) 
-- CODE:
var = input("x/y")
var2 = x//y
var3 = x%y
print("var1", "var2", "var3")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = x//y
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:14:00) 
-- CODE:
var = input("x/y")
var2 = x//y
var3 = x%y
print("var1", "var2", "var3")
-- EXECUTION TIME:
0.184531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 2, in <module>
    var2 = x//y
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:14:52) 
-- CODE:
var = input("x/y")
print("var1", "var2", "var3")
-- OUTPUT:
var1 var2 var3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:14:54) 
-- CODE:
x = 346
y = 2
print(x, y, x/y, x%y)
-- OUTPUT:
346 2 173.0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:15:05) 
-- CODE:
x = 346
y = 2
print(x, y, x/y, x%y)
-- EXECUTION TIME:
0.138146
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346 2 173.0 0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346 2 173.0 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346 2 173.0 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:15:09) 
-- CODE:
x = 346
y = 2
print(x, y, x/y, x%y)
-- OUTPUT:
346 2 173.0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:15:36) 
-- CODE:
x = 346
y = 2
print(x, y, x/y, x%y)
-- OUTPUT:
346 2 173.0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:16:21) 
-- CODE:
var1 = 346
va2 = 2
print(x, y, x/y, x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(x, y, x/y, x%y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:16:54) 
-- CODE:
var1 = 346
va2 = 2
print(var1, var2, var1/var2, var1%var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var1, var2, var1/var2, var1%var2)
NameError: name 'var2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:17:54) 
-- CODE:
var1 = 346
va2 = 2
print("var1", "var2", "var1/var2", "var1%var2")
-- OUTPUT:
var1 var2 var1/var2 var1%var2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:19:19) 
-- CODE:
x = 346
y = 2
-- OUTPUT:
var1 var2 var1/var2 var1%var2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:19:24) 
-- CODE:
x = 346
y = 2
-- EXECUTION TIME:
0.111085
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:20:34) 
-- CODE:
x = 346
y = 2
print(x, y, x//y, x%y)
-- OUTPUT:
346 2 173 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:20:40) 
-- CODE:
x = 346
y = 2
print(x, y, x//y, x%y)
-- EXECUTION TIME:
0.239931
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346 2 173 0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346 2 173 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346 2 173 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:20:43) 
-- CODE:
x = 346
y = 2
print(x, y, x//y, x%y)
-- OUTPUT:
346 2 173 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:54:41) 
-- CODE:
x = 346
y = 2
print(x, y, x//y, x%y)
-- OUTPUT:
346 2 173 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:55:08) 
-- CODE:
print(x, y, x//y, x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(x, y, x//y, x%y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:55:53) 
-- CODE:
x = divisor
y = dividendo
print(x, y, x//y, x%y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = divisor
NameError: name 'divisor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:56:27) 
-- CODE:
x = 346
y = 2
print(x, y, x//y, x%y)
-- OUTPUT:
346 2 173 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:56:32) 
-- CODE:
x = 346
y = 2
print(x, y, x//y, x%y)
-- EXECUTION TIME:
0.164821
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346 2 173 0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346 2 173 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346 2 173 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:56:58) 
-- CODE:
x = 346
y = 2
print(round(x, y, x//y, x%y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x, y, x//y, x%y))
TypeError: round() takes at most 2 arguments (4 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:57:03) 
-- CODE:
x = 346
y = 2
print(round(x, y, x//y, x%y))
-- EXECUTION TIME:
0.196622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 3, in <module>
    print(round(x, y, x//y, x%y))
TypeError: round() takes at most 2 arguments (4 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:58:36) 
-- CODE:
x = input("divisor")
y = input("dividendo")
print(round(x, y, x//y, x%y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x, y, x//y, x%y))
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 13:58:41) 
-- CODE:
x = input("divisor")
y = input("dividendo")
print(round(x, y, x//y, x%y))
-- EXECUTION TIME:
0.140805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 3, in <module>
    print(round(x, y, x//y, x%y))
TypeError: unsupported operand type(s) for //: 'str' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:59:33) 
-- CODE:
x = inter(input("divisor"))
y = inter(input("dividendo"))
print(round(x, y, x//y, x%y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = inter(input())
NameError: name 'inter' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:00:15) 
-- CODE:
x = int(input("divisor"))
y = int(input("dividendo"))
print(round(x, y, x//y, x%y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x, y, x//y, x%y))
TypeError: round() takes at most 2 arguments (4 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:00:20) 
-- CODE:
x = int(input("divisor"))
y = int(input("dividendo"))
print(round(x, y, x//y, x%y))
-- EXECUTION TIME:
0.166569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2049/main.py", line 3, in <module>
    print(round(x, y, x//y, x%y))
TypeError: round() takes at most 2 arguments (4 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:01:27) 
-- CODE:
x = int(input("divisor"))
y = int(input("dividendo"))
print(x, y, x//y, x%y)
-- OUTPUT:
8 5 1 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:01:31) 
-- CODE:
x = int(input("divisor"))
y = int(input("dividendo"))
print(x, y, x//y, x%y)
-- EXECUTION TIME:
0.118328
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8 5 1 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14 2 7 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347 2 173 1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
